methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: type mismatch;
 found   : Unit
 required: Boolean
{ if (versLAvant == true) { avance();
                                  ^MethodsArgs:7: error: type mismatch;
 found   : Unit
 required: Boolean
   recule();
         ^